--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,6 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "json-server": "^1.0.0-beta.5"
+    "json-server": "^0.17.4"
   }
 }
