config the project files fro deployment phase

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,22 @@
 # Node dependencies
 node_modules/
-backend/node_modules/
+client/node_modules/
+server/node_modules/
+
+# Environment variables
+.env
+
+# Build outputs
+dist/
+build/
+client/dist/
+client/build/
 
 # Editor folders
 .vscode/
+
+# Vercel
+.vercel
 
 # local test data
 # backend/db.json
