--- a/client/package.json
+++ b/client/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "client",
+  "name": "frontend",
   "version": "1.0.0",
-  "description": "",
+  "description": "Students Affairs System Frontend - Vite + Vanilla JS",
   "scripts": {
-    "dev": "npx http-server . -p 8080 -o /public/index.html -c-1",
-    "start": "npx http-server . -p 8080 -o /public/index.html"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "keywords": [],
   "author": "",
