--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,10 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Students Affairs Backend API",
+  "main": "api/server.js",
   "scripts": {
-    "start": "npx json-server --watch db.json --port 3000",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "json-server --watch db.json --port 3000"
   },
   "keywords": [],
   "author": "",
