--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,4 +1,7 @@
 {
-  "buildCommand": "echo 'No build required'",
-  "outputDirectory": "public"
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/index.html" }
+  ]
 }
