add vite config on the package

--- a/client/package.json
+++ b/client/package.json
@@ -13,5 +13,8 @@
   "dependencies": {
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1"
+  },
+  "devDependencies": {
+    "vite": "^5.0.0"
   }
 }
