--- a/client/package.json
+++ b/client/package.json
@@ -1,15 +1,32 @@
 {
-  "name": "frontend",
+  "name": "students-affairs-client",
   "version": "1.0.0",
-  "description": "Students Affairs System Frontend - Vite + Vanilla JS",
+  "description": "Students Affairs System Frontend - Vite + Vanilla JS with Bootstrap",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "student-management",
+    "vite",
+    "vanilla-js",
+    "bootstrap",
+    "frontend",
+    "spa"
+  ],
+  "authors": [
+    "Yousef Hany Mahmoud",
+    "Mohamed Wael Salem",
+    "Mohamed Nasr Elkhoreby"
+  ],
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/MoSalem149/students-affairs-system.git",
+    "directory": "client"
+  },
+  "homepage": "https://students-affairs-system.vercel.app/",
   "dependencies": {
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1"
